# my-pyproject

./: README.md  pyproject.toml
src/my_pyproject/: my_module.py
